--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -27,6 +27,16 @@ pgr_project close
 
 
 
+<A name="pn141231040010"></A><B><U><big>pn141231040010</big></U></B>
+#Start recording tcl command: 12/31/2014 03:57:31
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+pwc_command new
+pwc_command exit
+#Stop recording: 12/31/2014 04:00:10
+
+
+
 <BR>
 <BR>
 <BR>
