--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -37,6 +37,35 @@ pwc_command exit
 
 
 
+<A name="pn150101064533"></A><B><U><big>pn150101064533</big></U></B>
+#Start recording tcl command: 12/31/2014 22:54:28
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_src add "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift_1.v"
+prj_src remove "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift.v"
+#Stop recording: 1/1/2015 06:45:33
+
+
+
+<A name="pn150101205739"></A><B><U><big>pn150101205739</big></U></B>
+#Start recording tcl command: 1/1/2015 20:40:40
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_project save
+prj_project close
+#Stop recording: 1/1/2015 20:57:39
+
+
+
+<A name="pn150101224201"></A><B><U><big>pn150101224201</big></U></B>
+#Start recording tcl command: 1/1/2015 22:34:56
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_project close
+#Stop recording: 1/1/2015 22:42:01
+
+
+
 <BR>
 <BR>
 <BR>
