--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -66,6 +66,32 @@ prj_project close
 
 
 
+<A name="pn150102010614"></A><B><U><big>pn150102010614</big></U></B>
+#Start recording tcl command: 1/1/2015 22:48:10
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+#Stop recording: 1/2/2015 01:06:14
+
+
+
+<A name="pn150102025505"></A><B><U><big>pn150102025505</big></U></B>
+#Start recording tcl command: 1/2/2015 02:42:29
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_project close
+#Stop recording: 1/2/2015 02:55:05
+
+
+
+<A name="pn150102030056"></A><B><U><big>pn150102030056</big></U></B>
+#Start recording tcl command: 1/2/2015 02:55:47
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_project close
+#Stop recording: 1/2/2015 03:00:56
+
+
+
 <BR>
 <BR>
 <BR>
