--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
@@ -13,7 +13,7 @@ Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
 
-Command: bitgen -g RamCfg:Reset -path /home/justin/7SegClock/7SegClock/Lattice_FPGA -w -gui SevenSegClock_SevenSegClock.ncd SevenSegClock_SevenSegClock.prf 
+Command: bitgen -g RamCfg:Reset -path /home/justin/7SegClock/7SegClock/Lattice_FPGA -w -jedec -gui SevenSegClock_SevenSegClock.ncd SevenSegClock_SevenSegClock.prf 
 
 Loading design for application Bitgen from file SevenSegClock_SevenSegClock.ncd.
 Design name: AutoShift
@@ -74,7 +74,17 @@ Creating bit map...
  
 Bitstream Status: Final           Version 1.84.
  
-Saving bit stream in "SevenSegClock_SevenSegClock.bit".
+Saving bit stream in "SevenSegClock_SevenSegClock.jed".
+ 
+===========
+UFM Summary.
+===========
+UFM Size:        2046 Pages (128*2046 Bits).
+UFM Utilization: General Purpose Flash Memory.
+ 
+Available General Purpose Flash Memory: 2046 Pages (Page 0 to Page 2045).
+Initialized UFM Pages:                     0 Page.
+ 
 
 
 
