--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -92,6 +92,14 @@ prj_project close
 
 
 
+<A name="pn150102062832"></A><B><U><big>pn150102062832</big></U></B>
+#Start recording tcl command: 1/2/2015 05:05:34
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+#Stop recording: 1/2/2015 06:28:32
+
+
+
 <BR>
 <BR>
 <BR>
