--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
@@ -12,7 +12,7 @@ Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Fri Jan  2 08:05:45 2015
+Sat Jan  3 04:35:20 2015
 
 /usr/local/diamond/3.3_x64/ispfpga/bin/lin64/par -f
 SevenSegClock_SevenSegClock.p2t SevenSegClock_SevenSegClock_map.ncd
@@ -25,17 +25,17 @@ Preference file: SevenSegClock_SevenSegClock.prf.
 Level/      Number      Worst       Timing      Worst       Timing      Run         NCD
 Cost [ncd]  Unrouted    Slack       Score       Slack(hold) Score(hold) Time        Status
 ----------  --------    -----       ------      ----------- ----------- -----       ------
-5_1   *     0           477.744     0           0.377       0           07          Complete        
+5_1   *     0           477.744     0           0.377       0           06          Complete        
 
 
 * : Design saved.
 
-Total (real) run time for 1-seed: 7 secs 
+Total (real) run time for 1-seed: 6 secs 
 
 par done!
 
 Lattice Place and Route Report for Design &quot;SevenSegClock_SevenSegClock_map.ncd&quot;
-Fri Jan  2 08:05:45 2015
+Sat Jan  3 04:35:20 2015
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
@@ -49,7 +49,7 @@ Loading design for application par from file SevenSegClock_SevenSegClock_map.ncd
 Design name: AutoShift
 NCD version: 3.3
 Vendor:      LATTICE
-Device:      LCMXO2-7000HC
+Device:      LCMXO2-7000HE
 Package:     TQFP144
 Performance: 5
 Loading device for application par from file &apos;xo2c7000.nph&apos; in environment: /usr/local/diamond/3.3_x64/ispfpga.
@@ -74,10 +74,10 @@ Number of Signals: 129
 Number of Connections: 293
 
 Pin Constraint Summary:
-   15 out of 15 pins locked (100% locked).
+   24 out of 24 pins locked (100% locked).
 
 The following 3 signals are selected to use the primary clock routing resources:
-    n1378 (driver: SLICE_25, clk load #: 15)
+    n1377 (driver: SLICE_26, clk load #: 15)
     clk_c (driver: clk, clk load #: 12)
     latch_c (driver: latch, clk load #: 11)
 
@@ -88,20 +88,19 @@ The following 1 signal is selected to use the secondary clock routing resources:
     osc_clk_c_c (driver: OSCH_inst, clk load #: 6, sr load #: 0, ce load #: 0)
 
 No signal is selected as Global Set/Reset.
-.
 Starting Placer Phase 0.
-............
+
 Finished Placer Phase 0.  REAL time: 2 secs 
 
 Starting Placer Phase 1.
-...................
-Placer score = 16613.
-Finished Placer Phase 1.  REAL time: 5 secs 
+....................
+Placer score = 18195.
+Finished Placer Phase 1.  REAL time: 4 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  16604
-Finished Placer Phase 2.  REAL time: 5 secs 
+Placer score =  18069
+Finished Placer Phase 2.  REAL time: 4 secs 
 
 
 
@@ -115,7 +114,7 @@ Global Clock Resources:
   DCC        : 0 out of 8 (0%)
 
 Quadrants All (TL, TR, BL, BR) - Global Clocks:
-  PRIMARY &quot;n1378&quot; from F1 on comp &quot;SLICE_25&quot; on site &quot;R2C19C&quot;, clk load = 15
+  PRIMARY &quot;n1377&quot; from F1 on comp &quot;SLICE_26&quot; on site &quot;R2C19C&quot;, clk load = 15
   PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;33 (PL24B)&quot;, clk load = 12
   PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;35 (PL25B)&quot;, clk load = 11
   SECONDARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 6, ce load = 0, sr load = 0
@@ -139,11 +138,11 @@ I/O Bank Usage Summary:
 +----------+----------------+------------+-----------+
 | I/O Bank | Usage          | Bank Vccio | Bank Vref |
 +----------+----------------+------------+-----------+
-| 0        | 0 / 28 (  0%)  | 3.3V       | -         |
-| 1        | 0 / 29 (  0%)  | 3.3V       | -         |
-| 2        | 0 / 29 (  0%)  | 3.3V       | -         |
-| 3        | 4 / 9 ( 44%)   | 3.3V       | -         |
-| 4        | 10 / 10 (100%) | 3.3V       | -         |
+| 0        | 0 / 28 (  0%)  | -          | -         |
+| 1        | 0 / 29 (  0%)  | -          | -         |
+| 2        | 0 / 29 (  0%)  | -          | -         |
+| 3        | 6 / 9 ( 66%)   | 3.3V       | -         |
+| 4        | 8 / 10 ( 80%)  | 3.3V       | -         |
 | 5        | 10 / 10 (100%) | 3.3V       | -         |
 +----------+----------------+------------+-----------+
 
@@ -157,11 +156,11 @@ WARNING - par: The driver of primary clock net clk_c is not placed on one of the
 WARNING - par: The driver of primary clock net latch_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n1379 loads=2 clock_loads=2
+   Signal=n1378 loads=2 clock_loads=2
 
-Completed router resource preassignment. Real time: 7 secs 
+Completed router resource preassignment. Real time: 6 secs 
 
-Start NBR router at Fri Jan 02 08:05:52 UTC 2015
+Start NBR router at Sat Jan 03 04:35:26 UTC 2015
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -176,44 +175,44 @@ Note: NBR uses a different method to calculate timing slacks. The
       your design. Thanks.                                       
 *****************************************************************
 
-Start NBR special constraint process at Fri Jan 02 08:05:52 UTC 2015
+Start NBR special constraint process at Sat Jan 03 04:35:26 UTC 2015
 
-Start NBR section for initial routing at Fri Jan 02 08:05:52 UTC 2015
+Start NBR section for initial routing at Sat Jan 03 04:35:26 UTC 2015
 Level 4, iteration 1
-8(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Fri Jan 02 08:05:52 UTC 2015
+Start NBR section for normal routing at Sat Jan 03 04:35:26 UTC 2015
 Level 4, iteration 1
-4(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 Level 4, iteration 2
-1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 Level 4, iteration 3
-1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 Level 4, iteration 4
 1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 Level 4, iteration 5
 1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 Level 4, iteration 6
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 
-Start NBR section for setup/hold timing optimization with effort level 3 at Fri Jan 02 08:05:52 UTC 2015
+Start NBR section for setup/hold timing optimization with effort level 3 at Sat Jan 03 04:35:26 UTC 2015
 
-Start NBR section for re-routing at Fri Jan 02 08:05:52 UTC 2015
+Start NBR section for re-routing at Sat Jan 03 04:35:26 UTC 2015
 Level 4, iteration 1
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
 
-Start NBR section for post-routing at Fri Jan 02 08:05:52 UTC 2015
+Start NBR section for post-routing at Sat Jan 03 04:35:26 UTC 2015
 
 End NBR router with 0 unrouted connection
 
@@ -229,10 +228,10 @@ Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored
 
 
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n1379 loads=2 clock_loads=2
+   Signal=n1378 loads=2 clock_loads=2
 
 Total CPU time 6 secs 
-Total REAL time: 7 secs 
+Total REAL time: 6 secs 
 Completely routed.
 End of route.  293 routed (100.00%); 0 unrouted.
 Checking DRC ... 
@@ -257,7 +256,7 @@ PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Number of errors = 0
 
 Total CPU  time to completion: 6 secs 
-Total REAL time to completion: 7 secs 
+Total REAL time to completion: 6 secs 
 
 par done!
 
