--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -100,6 +100,15 @@ prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ld
 
 
 
+<A name="pn150102083521"></A><B><U><big>pn150102083521</big></U></B>
+#Start recording tcl command: 1/2/2015 08:04:59
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_run Export -impl SevenSegClock -task Jedecgen
+#Stop recording: 1/2/2015 08:35:21
+
+
+
 <BR>
 <BR>
 <BR>
