--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
@@ -12,7 +12,7 @@ Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Sat Jan  3 04:35:20 2015
+Sat Jan  3 07:01:26 2015
 
 /usr/local/diamond/3.3_x64/ispfpga/bin/lin64/par -f
 SevenSegClock_SevenSegClock.p2t SevenSegClock_SevenSegClock_map.ncd
@@ -25,17 +25,17 @@ Preference file: SevenSegClock_SevenSegClock.prf.
 Level/      Number      Worst       Timing      Worst       Timing      Run         NCD
 Cost [ncd]  Unrouted    Slack       Score       Slack(hold) Score(hold) Time        Status
 ----------  --------    -----       ------      ----------- ----------- -----       ------
-5_1   *     0           477.744     0           0.377       0           06          Complete        
+5_1   *     0           477.744     0           0.377       0           07          Complete        
 
 
 * : Design saved.
 
-Total (real) run time for 1-seed: 6 secs 
+Total (real) run time for 1-seed: 7 secs 
 
 par done!
 
 Lattice Place and Route Report for Design &quot;SevenSegClock_SevenSegClock_map.ncd&quot;
-Sat Jan  3 04:35:20 2015
+Sat Jan  3 07:01:26 2015
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
@@ -94,13 +94,13 @@ Finished Placer Phase 0.  REAL time: 2 secs
 
 Starting Placer Phase 1.
 ....................
-Placer score = 18195.
-Finished Placer Phase 1.  REAL time: 4 secs 
+Placer score = 17692.
+Finished Placer Phase 1.  REAL time: 5 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  18069
-Finished Placer Phase 2.  REAL time: 4 secs 
+Placer score =  17653
+Finished Placer Phase 2.  REAL time: 5 secs 
 
 
 
@@ -114,7 +114,7 @@ Global Clock Resources:
   DCC        : 0 out of 8 (0%)
 
 Quadrants All (TL, TR, BL, BR) - Global Clocks:
-  PRIMARY &quot;n1377&quot; from F1 on comp &quot;SLICE_26&quot; on site &quot;R2C19C&quot;, clk load = 15
+  PRIMARY &quot;n1377&quot; from F1 on comp &quot;SLICE_26&quot; on site &quot;R2C19A&quot;, clk load = 15
   PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;33 (PL24B)&quot;, clk load = 12
   PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;35 (PL25B)&quot;, clk load = 11
   SECONDARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 6, ce load = 0, sr load = 0
@@ -146,7 +146,7 @@ I/O Bank Usage Summary:
 | 5        | 10 / 10 (100%) | 3.3V       | -         |
 +----------+----------------+------------+-----------+
 
-Total placer CPU time: 4 secs 
+Total placer CPU time: 3 secs 
 
 Dumping design to file SevenSegClock_SevenSegClock.dir/5_1.ncd.
 
@@ -158,9 +158,9 @@ WARNING - par: The driver of primary clock net latch_c is not placed on one of t
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
    Signal=n1378 loads=2 clock_loads=2
 
-Completed router resource preassignment. Real time: 6 secs 
+Completed router resource preassignment. Real time: 7 secs 
 
-Start NBR router at Sat Jan 03 04:35:26 UTC 2015
+Start NBR router at Sat Jan 03 07:01:33 UTC 2015
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -175,44 +175,50 @@ Note: NBR uses a different method to calculate timing slacks. The
       your design. Thanks.                                       
 *****************************************************************
 
-Start NBR special constraint process at Sat Jan 03 04:35:26 UTC 2015
+Start NBR special constraint process at Sat Jan 03 07:01:33 UTC 2015
 
-Start NBR section for initial routing at Sat Jan 03 04:35:26 UTC 2015
+Start NBR section for initial routing at Sat Jan 03 07:01:33 UTC 2015
 Level 4, iteration 1
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+13(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Sat Jan 03 04:35:26 UTC 2015
+Start NBR section for normal routing at Sat Jan 03 07:01:33 UTC 2015
 Level 4, iteration 1
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+8(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 Level 4, iteration 2
-2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+4(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 Level 4, iteration 3
-2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 Level 4, iteration 4
-1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 Level 4, iteration 5
-1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 Level 4, iteration 6
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Level 4, iteration 7
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
+Level 4, iteration 8
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 
-Start NBR section for setup/hold timing optimization with effort level 3 at Sat Jan 03 04:35:26 UTC 2015
+Start NBR section for setup/hold timing optimization with effort level 3 at Sat Jan 03 07:01:33 UTC 2015
 
-Start NBR section for re-routing at Sat Jan 03 04:35:26 UTC 2015
+Start NBR section for re-routing at Sat Jan 03 07:01:33 UTC 2015
 Level 4, iteration 1
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 6 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 477.744ns/0.000ns; real time: 7 secs 
 
-Start NBR section for post-routing at Sat Jan 03 04:35:26 UTC 2015
+Start NBR section for post-routing at Sat Jan 03 07:01:33 UTC 2015
 
 End NBR router with 0 unrouted connection
 
@@ -230,8 +236,8 @@ Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
    Signal=n1378 loads=2 clock_loads=2
 
-Total CPU time 6 secs 
-Total REAL time: 6 secs 
+Total CPU time 5 secs 
+Total REAL time: 7 secs 
 Completely routed.
 End of route.  293 routed (100.00%); 0 unrouted.
 Checking DRC ... 
@@ -255,8 +261,8 @@ PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 0.377
 PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Number of errors = 0
 
-Total CPU  time to completion: 6 secs 
-Total REAL time to completion: 6 secs 
+Total CPU  time to completion: 5 secs 
+Total REAL time to completion: 7 secs 
 
 par done!
 
